--- a/project.properties
+++ b/project.properties
@@ -1,4 +1,4 @@
-name=FN-ULP
+name=FN-AC
 dependencies.Adafruit_BusIO=1.8.3
 dependencies.Adafruit_HTU21DF=1.1.0
 dependencies.Adafruit_MCP9808=2.0.0
